--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cp ./src/style.css ./dist/ && webpack",
     "build-win": "copy .\\src\\style.css .\\dist\\ && webpack",
     "prod-build": "cp ./src/style.css ./dist/ && webpack --mode=production",
-    "prod-build-win": "copy .\\src\\style.css .\\dist\\ && webpack --mode=production",
+    "prod-build-win": "copy .\\src\\style.css .\\dist\\ && webpack --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "rtfcv",
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
